2023-03-26  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_stats.R: Revisit change from PR #1252; we now
	use a slightly smaller tolerance to accomodate old and new value

2023-03-25  Iñaki Ucar  <iucar@fedoraproject.org>

	* R/Attributes.R: Switch to system2 to be able to capture stderr on error

2023-03-24  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci-dev/Dockerfile: During Debian freeze experimental repo is
	renamed which leads to a hickup here so temporarily remove list file

2023-03-24  Iñaki Ucar  <iucar@fedoraproject.org>

	* inst/tinytest/test_xptr.R: Skip some tests on Windows

2023-03-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

	* src/attributes.cpp (RExportsGenerator::writeEnd): Replace a pair of
	apostrophes with backticks in generated .Call() statemente

2023-02-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_stats.R: Use more accurate value in R 4.3.0

2023-02-06  Dirk Eddelbuettel  <edd@debian.org>

	* inst/CITATION: Update to new format preferred by r-devel

2023-02-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

	* inst/include/Rcpp/sugar/functions/sapply.h: Enable compilation
	under C++20 (using clang++ and its C++ library) via invoke_result

2023-01-29  Iñaki Ucar  <iucar@fedoraproject.org>

	* inst/tinytest/test_xptr.R: Fix a couple of tests writing to stdout

2023-01-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

2023-01-24  Lukasz Laniewski-Wollk  <llaniewski@meil.pw.edu.pl>

	* R/RcppLdpath.R: CxxFlags() now quotes only non-standard paths on linux

2023-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/String.h: Address clang++-14 conversion warning