@@ -3,6 +3,9 @@
 	* inst/tinytest/test_stats.R: Revisit change from PR #1252; we now
 	use a slightly smaller tolerance to accomodate old and new value
 
+	* inst/tinytest/test_sugar.R: Protect a small number of tests on NA
+	propagation from running on arm64/Darwin which requires special care
+
 2023-03-25  Iñaki Ucar  <iucar@fedoraproject.org>
 
 	* R/Attributes.R: Switch to system2 to be able to capture stderr on error
